--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    dexOptions {
+       javaMaxHeapSize "3g"
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -194,8 +197,15 @@ dependencies {
 // For animated GIF support
   implementation 'com.facebook.fresco:animated-gif:2.0.0'
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+implementation 'com.google.android.material:material:1.5.0'
 
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    
+implementation ("androidx.appcompat:appcompat:1.3.1") {
+    version {
+        strictly '1.3.1'
+    }
+}
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
