--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@stripe/stripe-react-native": "^0.18.1",
     "native-base": "^2.15.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
